    - Fixed UE9 Modbus over TCP on Windows.
    - Added DAC and EEPROM address variables to LJTickDAC example.
    - Turned off debugging by default in U12 class.
    - Updated special channels in streaming. 
- August 26, 2011
    - Updated README file to include a U12 example and license information.
    - Added U6 timer mode 14 support.
    - Modified UE9 TCP open to create TCP sockets without a UDP broadcast when 
      IP address is specified (Linux/Mac OS X).
    - Added NoStopWhenRestarting parameter to UE9 and U3 classes' i2c method,
      and reordered i2c parameters so they are the same across UE9, U3 and U6
      classes.
    - Fixed a bug in the u3allio example where incorrect binary to voltage
      conversions were taking place for channels > 3 on U3-HVs.
    - Fixed the Handle parameter name in the AddRequest method.
    - Fixed a LabJackException throw in U12.write. Now throws an U12Exception.
- October 22, 2012
    - Fixed a U3 and U6 stream bug when SamplesPerPacket was less than 25.
    - Changed UE9 TCP stream reads on Linux/MacOS X to return the packet as a
      a string. Makes it consistent with all other stream reads.
    - Added streaming support to the UE9 class.
    - Updated stream examples to include the UE9.
    - Added negative channel 32 support to U3 streaming methods.
    - In the U3 stream examples, added the getCalibrationData call for
      calibrated readings.
    - Fixed U3 voltageToDACBits method to handle uncalibrated 16 bit
      conversions and changed the formula to use nominal slope and offset.
    - Fixed broken U6-Pro hi-res support.
    - Added voltageToDACBits function to UE9 and U6 classes.
    - Cleaned up and added some U6 class documentation.
    - Fixed UE9 feedback function for DAC1.
    - Fixed UE9 watchdogConfig and watchdogRead functions.
    - Fixed how UE9-Pro calibration constants are applied when BipGain = 0 or
      8 and Resolution < 18.